fix form required fields

--- a/src/index.html
+++ b/src/index.html
@@ -532,6 +532,7 @@
                 placeholder="Your message"
                 minlength="10"
                 maxlength="50"
+                required
               >
             </label>
     
