--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dia</title>
-    <link rel="icon" href="./images/logo/dia-logo.svg">
+    <link rel="icon" href="./images/logo/dia-logo.svg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -518,8 +518,8 @@
                 name="name" 
                 id="name"
                 placeholder="Your name"
-                required
                 maxlength="20"
+                required
               >
             </label>
             
